@@ -1,45 +1,63 @@
 package ru.practicum.shareit.item.service;
 
+import org.springframework.transaction.annotation.Transactional;
 import jakarta.validation.ValidationException;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.stereotype.Repository;
+import org.springframework.stereotype.Service;
+import ru.practicum.shareit.booking.dto.BookingTinyDto;
+import ru.practicum.shareit.booking.jpaBooking.BookingRepository;
+import ru.practicum.shareit.booking.model.Status;
+import ru.practicum.shareit.booking.service.BookingsService;
 import ru.practicum.shareit.exceptions.NotFoundException;
+import ru.practicum.shareit.item.dto.CommentDto;
 import ru.practicum.shareit.item.dto.ItemDto;
+import ru.practicum.shareit.item.dto.ItemLastNextDto;
+import ru.practicum.shareit.item.jpaItem.CommentRepository;
+import ru.practicum.shareit.item.jpaItem.ItemRepository;
+import ru.practicum.shareit.item.mapper.CommentMapper;
 import ru.practicum.shareit.item.mapper.ItemMapper;
+import ru.practicum.shareit.item.model.Comment;
 import ru.practicum.shareit.item.model.Item;
-import ru.practicum.shareit.user.User;
+import ru.practicum.shareit.user.model.User;
+import ru.practicum.shareit.user.jpaUser.UserRepository;
 import ru.practicum.shareit.user.service.UserDao;
 
+import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
 @Slf4j
-@Repository
-public class ItemDAO {
-
+@Service
+public class ItemDAO implements ItemInterface {
 
     private final UserDao userDao;
 
-    private final Map<Long,Item> items = new HashMap<>();
+    private final ItemRepository itemRepository;
+    private final UserRepository userRepository;
+    private final BookingsService bookingsService;
+    private final BookingRepository bookingRepository;
+    private final CommentRepository commentRepository;
 
-    private long itemId = 0;
-
-    public ItemDAO(UserDao userDao) {
+    public ItemDAO(UserDao userDao, ItemRepository itemRepository, UserRepository userRepository, BookingsService bookingsService, BookingRepository bookingRepository, CommentRepository commentRepository) {
         this.userDao = userDao;
+        this.itemRepository = itemRepository;
+        this.userRepository = userRepository;
+        this.bookingsService = bookingsService;
+        this.bookingRepository = bookingRepository;
+        this.commentRepository = commentRepository;
     }
 
 
+    @Transactional
     public Item postItem(long userId, ItemDto itemDto) {
         log.info("Запрос на создание вещи");
         validateItemDto(itemDto);
         User user = userDao.getUserById(userId);
-        Item item = ItemMapper.toItem(itemDto,userId);
-        item.setOwner(user.getId());
-        item.setId(generateId());
-        items.put(item.getId(),item);
+        Item item = ItemMapper.toItem(itemDto,user);
+        Item savedItem = itemRepository.save(item);
         log.info("Запрос на создание вещи выполнен");
 
-        return item;
+        return savedItem;
     }
 
     private void validateItemDto(ItemDto dto) {
@@ -57,16 +75,14 @@ public class ItemDAO {
         }
     }
 
-    public long generateId() {
-        return ++itemId;
-    }
-
+    @Transactional
     public Item updateItem(ItemDto itemDto, long itemId, long ownerId) {
         log.info("Запрос на обновление данных вещи");
-        Item itemToUpdate = getItemById(itemId);
+        Item itemToUpdate = itemRepository
+                .findById(itemId).orElseThrow(() -> new NotFoundException("предмета не существует"));
 
 
-        if (itemToUpdate.getOwner() != ownerId) {
+        if (itemToUpdate.getOwner().getId() != ownerId) {
             throw new NotFoundException("У данного пользовталея нет такой вещи");
         }
 
@@ -75,41 +91,68 @@ public class ItemDAO {
         }
 
         if (itemDto.getDescription() != null && !itemDto.getDescription().isBlank()) {
-             itemToUpdate.setDescription(itemDto.getDescription());
+             itemToUpdate.setDescription(itemDto.getDescription().trim());
         }
 
         if (itemDto.getAvailable() != null) {
             itemToUpdate.setAvailable(itemDto.getAvailable());
         }
 
-        items.put(itemId,itemToUpdate);
+        Item updatedItem = itemRepository.save(itemToUpdate);
 
         log.info("Запрос выполнен");
 
 
-        return itemToUpdate;
+        return updatedItem;
 
     }
 
-    public Item getItemById(long id) {
+    @Transactional(readOnly = true)
+    public ItemLastNextDto getItemById(long id, Long userId) {
+        Item item = itemRepository.findById(id).orElseThrow(() -> new NotFoundException("Предмет не найден"));
 
-        if (!items.containsKey(id)) {
-            throw new NotFoundException("Вещь не найдена");
+        List<Comment> comments = commentRepository.findByItemIdOrderByCreatedDesc(item.getId());
+
+        List<CommentDto> commentDto = comments.stream().map(CommentMapper::toCommentDto).toList();
+
+        BookingTinyDto lastBooking = null;
+
+        BookingTinyDto nextBooking = null;
+
+        if (Objects.equals(item.getOwner().getId(),userId)) {
+            lastBooking = bookingsService.getLastBooking(item.getId());
+
+            nextBooking = bookingsService.getNextBooking(item.getId());
         }
 
-        return items.get(id);
+        return ItemMapper.toItemLastNextDto(item,lastBooking,nextBooking,commentDto);
     }
 
-    public ItemDto getItemDto(long id) {
-        return ItemMapper.toItemDto(getItemById(id));
-    }
 
-    public List<ItemDto> getItemsByOwner(long id) {
-        return items.values().stream().filter(item -> Objects.equals(item.getOwner(),id))
-                .map(ItemMapper::toItemDto)
+    @Transactional(readOnly = true)
+    public List<ItemLastNextDto> getItemsByOwner(long id) {
+
+        if (!userRepository.existsById(id)) {
+            throw new NotFoundException("user not found");
+        }
+
+        List<Item> items = itemRepository.getItemsByOwnerId(id);
+
+        return items.stream()
+                .map(item -> {
+                    BookingTinyDto lastBooking = bookingsService.getLastBooking(item.getId());
+                    BookingTinyDto nextBooking = bookingsService.getNextBooking(item.getId());
+                    List<CommentDto> comments = commentRepository
+                            .findByItemIdOrderByCreatedDesc(item.getId())
+                            .stream()
+                            .map(CommentMapper::toCommentDto)
+                            .collect(Collectors.toList());
+                    return ItemMapper.toItemLastNextDto(item, lastBooking, nextBooking, comments);
+                })
                 .collect(Collectors.toList());
     }
 
+    @Transactional(readOnly = true)
     public Collection<ItemDto> searchItem(String text) {
 
         if (text == null || text.isBlank()) {
@@ -118,13 +161,36 @@ public class ItemDAO {
 
         String searchText = text.toLowerCase();
 
-        return items.values().stream()
-                .filter(Item::getAvailable)
-                .filter(item -> item.getName().toLowerCase().contains(searchText) ||
-                        item.getDescription().toLowerCase().contains(searchText))
+        List<Item> items = itemRepository.searchItems(searchText);
+
+        return items.stream()
                 .map(ItemMapper::toItemDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    @Transactional
+    public CommentDto createComment(CommentDto commentDto,Long itemId, Long userId) {
 
+        Item item = itemRepository.findById(itemId)
+                .orElseThrow(() -> new NotFoundException("Вещь не существует"));
+
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException("Пользователя не существует"));
+
+        boolean canComment = bookingRepository
+                .existsByBookerIdAndItemIdAndStatusAndEndBefore(userId,itemId, Status.APPROVED, LocalDateTime.now());
+
+        if (!canComment) {
+            throw new ValidationException("Вы не бронировали вещь или бронь еще не закончилась.Отзыв не доступен");
+        }
+
+        if (commentDto.getText() == null || commentDto.getText().isBlank()) {
+            throw new ValidationException("Текст комментария не может быть пустым");
+        }
+
+        Comment comment = CommentMapper.toComment(commentDto,item,user);
+        Comment savedComment = commentRepository.save(comment);
+
+        return CommentMapper.toCommentDto(savedComment);
+    }
 }
